@@ -16,6 +16,7 @@ PHP                                                                        NEWS
   (David Soria Parra)
 - Changed "post_max_size" php.ini directive to allow unlimited post size by
   setting it to 0. (Rasmus)
+- Changed tidyNode class to disallow manual node creation. (Pierrick)
 
 - Removed automatic file descriptor unlocking happening on shutdown and/or 
   stream close (on all OSes). (Tony, Ilia)
